--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #737272;
+    color: white;
 }
 
 .container {
@@ -9,7 +10,7 @@ body {
     text-align: center;
 }
 
-button {
+.btn {
     padding: 10px 20px;
     font-size: 16px;
     background-color: #007bff;
@@ -19,7 +20,13 @@ button {
     border-radius: 10px;
 }
 
-button:hover {
+.btn:hover {
     background-color: #0056b3;
 }
-
+.quote {
+    font-style: italic;
+}
+.quote::before,
+.quote::after {
+    content: '"';
+}
