--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,53 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #737272;
-    color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #737272;
+  color: white;
 }
 
 .container {
-    max-width:  600px;
-    margin: 50px auto;
-    text-align: center;
+  max-width: 600px;
+  margin: 50px auto;
+  text-align: center;
 }
 
 .btn {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
 .btn:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
+}
+
+#toggle-favorite-btn {
+  display: none;
 }
 .quote {
-    font-style: italic;
+  font-style: italic;
 }
+
 .quote::before,
 .quote::after {
-    content: '"';
+  content: '"';
+}
+.favorites-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.favorite-card {
+  background-color: #f9f9f9;
+  color: darkslategrey;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 8px;
+  width: 25%;
+}
+.author {
+  font-style: italic;
 }
