--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,9 @@ body {
 .author {
   font-style: italic;
 }
+.star-icon {
+    font-size: 30px;
+    color: yellow;
+    cursor: pointer;
+    vertical-align: middle;
+}
